pic (also don't love this, weird box?)

--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,7 @@
 <body>
     <div class="container">
 <a href="#" class="btn btn-clr">Spoookkyyy</a>
+<img src="/Images/Pumpkin.jpeg" alt="" class="pumpkin">
 
     </div>
 </body>
