better collage positioning

--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,14 @@
     <div class="container">
 <a href="#" class="btn btn-clr">Spoookkyyy</a>
 <img src="/Images/Pumpkin.jpeg" alt="" class="pumpkin">
-
+<div class="imgparent">
+    <div class="imggallery">
+        <img src="/Images/tress.jpeg" alt="" class="spookyimg SI1">
+        <img src="/Images/moon.jpg" alt="" class="spookyimg SI2">
+        <img src="/Images/skull.jpeg" alt="" class="spookyimg SI3">
+        <img src="/Images/grave.jpg" alt="" class="spookyimg SI4">
+    </div>
+</div>
     </div>
 </body>
 </html>
