icon (in progress)

--- a/Index.html
+++ b/Index.html
@@ -17,6 +17,7 @@
         <img src="/Images/grave.jpg" alt="" class="spookyimg SI4">
     </div>
 </div>
+<img src="/Images/kitkat.svg" alt="" class="icon">
     </div>
 </body>
 </html>
