--- a/Index.html
+++ b/Index.html
@@ -18,6 +18,10 @@
     </div>
 </div>
 <img src="/Images/kitkat.svg" alt="" class="icon">
+<div class="rainbow">
+    <img src="/Images/Rainbow.jpeg" alt="" class="rainbow-picture">
+    <h1 class="rainbow-text"> HELLO!</h1>
+</div>
     </div>
 </body>
 </html>
